--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.61.3",
     "axios": "^1.7.7",
+    "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
