--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.5",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.1"
   },
